Dev (#3)
* feat: implement mark, delete, star and bulk actions (#1)

* feat: implement email actions - mark read/unread, star, delete, and untrash APIs

* feat: implement bulk actions - bulk delete and bulk mark read/unread

* Refactor ResponseWrapper, ErrorCode, and GoogleEmailStrategy exception handling

* feat: paging and handle download attachment

* fix resolve conflict

* feat: add send and reply email

* fix: remove db config and change the input for api sent and reply email

* feat: store user avt in jwt

* feat: add endpoint and service to retrieve all messages within an email thread

* feat: add Swagger into security whitelist.

* feat: Add API endpoint and service to retrieve public user profiles by email.

---------

Co-authored-by: Nguyen Nam Khanh <128170688+NKhank11@users.noreply.github.com>
Co-authored-by: khoapda <khoapda@vng.com.vn>
Co-authored-by: BrianTrac <dangphuchung321@gmail.com>